Fix some form alignment issues

--- a/src/app/admin/admin.less
+++ b/src/app/admin/admin.less
@@ -21,8 +21,13 @@
   color: @color-subdued;
   border-bottom: 1px solid @color-silver;
 
+  .md-errors-spacer {
+    display: none;
+  }
+
   md-checkbox {
     opacity: 0.4;
+    margin-bottom: 0;
     &.md-checked {
       opacity: 1;
     }
@@ -40,7 +45,7 @@
   }
 
   button {
-    margin-bottom: 26px;
+    // margin-bottom: 26px;
   }
 }
 
